test/fail/internal/expr_after_raise.lly
#[
SyntaxError: Statement(s) after 'raise' will not execute.
Where: File "expr_after_raise.lly" at line 7
]#

raise ValueError::new("")
var v = 10
